--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: fefferyMarkdownComponents
 Title: A more complete markdown implementation in dash.
-Version: 0.0.1
+Version: 0.0.2
 Description: A more complete markdown implementation in dash.
 Depends: R (>= 3.0.2)
 Imports: 
 Suggests: 
 License: MIT + file LICENSE
-URL: https://github.com/https://github.com/CNFeffery/feffery-markdown-components
-BugReports: https://github.com/https://github.com/CNFeffery/feffery-markdown-components/issues
+URL: https://github.com/CNFeffery/feffery-markdown-components
+BugReports: https://github.com/CNFeffery/feffery-markdown-components/issues
 Encoding: UTF-8
 LazyData: true
 KeepSource: true
