--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: fefferyMarkdownComponents
-Title: A more complete markdown implementation in dash.
+Title: Better markdown render component in Plotly Dash.
 Version: 0.1.0
-Description: A more complete markdown implementation in dash.
+Description: Better markdown render component in Plotly Dash.
 Depends: R (>= 3.0.2)
 Imports: 
 Suggests: 
