--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feffery_markdown_components",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Better markdown render component in Plotly Dash.",
   "repository": {
     "type": "git",
@@ -23,6 +23,7 @@
   "license": "MIT",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "antd": "^4.22.7",
     "github-markdown-css": "^5.0.0",
     "katex": "^0.15.1",
     "less": "^3.13.1",
@@ -36,6 +37,7 @@
     "rehype-raw": "^6.1.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.0",
+    "remark-mermaid": "^0.2.0",
     "uglifyjs-webpack-plugin": "^2.2.0"
   },
   "devDependencies": {
