build&feat: 调整最新开发版本号为0.2.0-rc0；新增针对不同内容部分的style、className自定义功能

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fefferyMarkdownComponents
 Title: Better markdown render component in Plotly Dash.
-Version: 0.1.1
+Version: 0.2.0-rc0
 Description: Better markdown render component in Plotly Dash.
 Depends: R (>= 3.0.2)
 Imports: 
