--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "katex": "^0.15.1",
     "less": "^3.13.1",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.21",
     "ramda": "^0.26.1",
     "react-copy-to-clipboard": "^5.0.4",
     "react-markdown": "^8.0.0",
