--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: fefferyMarkdownComponents
 Title: Better markdown render component in Plotly Dash.
-Version: 0.2.10
+Version: 0.3.0-rc0
 Description: Better markdown render component in Plotly Dash.
 Depends: R (>= 3.0.2)
 Imports: 
