--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ index.html
 
 feffery_markdown_components.min.js.map
 
+feffery_markdown_components.min.js
+
 package-lock.json
 
 feffery_markdown_components.min.js.LICENSE.txt
