chore: 更新gitignore、npmignore、setup.py等配置参数

--- a/.gitignore
+++ b/.gitignore
@@ -1,49 +1,20 @@
-/node_modules
-
-/build
-
-.build_cache
-
-/deps
-
-/dist
-
-/feffery_markdown_components.egg-info
-
-/inst
-
-/man
-
-/.git
-
-/_*
-
-/R
-
 /.vscode
-
-__pycache__
-
-index.html
-
-feffery_markdown_components.min.js.map
-
-feffery_markdown_components.min.js
-
-package-lock.json
-
-feffery_markdown_components.min.js.LICENSE.txt
-
+/.build_cache
+/assets
+/build
+/deps
+/dist
+/feffery_markdown_components/*.json
+/feffery_markdown_components/*.js
+/feffery_markdown_components/*.map
+/feffery_markdown_components/__pycache__
+/feffery_markdown_components.egg-info
+/inst
+/man
+/node_modules
+/R
+/src/demo
+/src/jl
+/src/*.jl
 .Rbuildignore
-
-.babelrc
-
-.eslintignore
-
-.eslintrc
-
-.npmignore
-
-.prettierrc
-
-.pylintrc
+package-lock.json
