chore: 更新MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,6 @@
-include feffery_markdown_components/feffery_markdown_components.min.js
-include feffery_markdown_components/feffery_markdown_components.min.js.map
-include feffery_markdown_components/async-*.js
-include feffery_markdown_components/async-*.js.map
-include feffery_markdown_components/*-shared.js
-include feffery_markdown_components/*-shared.js.map
-include feffery_markdown_components/metadata.json
-include feffery_markdown_components/package-info.json
+include feffery_markdown_components/*.js
+exclude feffery_markdown_components/*.map
+include *.json
 include README.md
 include LICENSE
 include package.json
