--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include feffery_markdown_components/*.js
-exclude feffery_markdown_components/*.map
+include feffery_markdown_components/*.map
 include *.json
 include README.md
 include LICENSE
